--- a/index.html
+++ b/index.html
@@ -28,6 +28,4 @@
                     <li><a href="resources.html">Resources</a></li>
                 </ul>
             </nav>
-        </header>
-        <main>
-      
+        </header
