--- a/index.html
+++ b/index.html
@@ -28,4 +28,6 @@
                     <li><a href="resources.html">Resources</a></li>
                 </ul>
             </nav>
-        </header
+        </header>
+        <main>
+      
