--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <body>
         <header>
             <!-- Heading 1 for main title -->
-            <h1>I Miss My Cafe</h1>
+            <h1>I Miss My Desk</h1>
             <p> Hi </p>
             
             <!-- Navigation section -->
