--- a/index.html
+++ b/index.html
@@ -32,4 +32,10 @@
             </nav>
         </header>
         <main>
+
+            <audio controls>
+                <source src="rainy-day-in-town-with-birds-singing-194011.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </main>
       
