--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
             </nav>
         </header>
         <main>
-
-            <audio controls>
-                <source src="rainy-day-in-town-with-birds-singing-194011.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
+            <style>
+                h2.audio-title {
+                    font-size: 1.5em;
+                    color: #5d6b79;
+                    margin-bottom: 0.5em;
+                }
+            </style>
+            
+            <h2 class= "Rainy">Rain and Bird Sounds</h2>
+         <audio controls>
+            <source src="rainy-day-in-town-with-birds-singing-194011.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
             </audio>
         </main>
       
