--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <!-- Meta tags for character set, description, and viewport settings -->
         <meta charset="UTF-8">
-        <meta name="description" content="Welcome to the cozy world of I Miss My Cafe.">
+        <meta name="description" content="Welcome to the cozy world of I Miss My Desk.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Title of the page -->
@@ -14,7 +14,9 @@
         <link rel="stylesheet" type="text/css" href="style.css" media="screen">
     </head>
 
-       <body>
+    <!-- Body -->
+    <body>
+        <!-- Header -->
         <header>
             <!-- Heading 1 for main title -->
             <h1>I Miss My Desk</h1>
@@ -28,5 +30,18 @@
                 </ul>
             </nav>
         </header>
-        <main>
-      
+
+
+
+        <!-- Button Code to Switch Image-->
+        <div class="container">
+            <!-- Text Displayed as Button-->
+            <h1>Change Image on Button Click</h1>
+            <img id="mainImage" src="IMG_6776.jpeg" alt="Main Image">
+            <button id="changeButton" type="button">Change Image</button>
+        </div>
+        <!---Should I move it to be added with css link?-->
+        <script src="script.js"></script>
+    </body>
+
+    <main>
