--- a/index.html
+++ b/index.html
@@ -36,4 +36,17 @@
             <nav>
                 <ul>
                     <!-- List items for navigation links -->
-                    <li class="cur
+                    <li class="current-page"><a href="index.html">Home</a></li>
+                    <li><a href="resources.html">Resources</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            
+            <h2 class= "Rainy">Rain and Bird Sounds</h2>
+         <audio controls>
+            <source src="rainy-day-in-town-with-birds-singing-194011.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+            </audio>
+        </main>
+      
