--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         
         <!-- Title of the page -->
 
-        <title>I Miss My Desk
-        </title>
+        <title>I Miss My Desk</title>
 
         <title>I Miss My Desk</title>
 
