--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container">
             <!-- Text Displayed as Button-->
             <h1>Change Image on Button Click</h1>
-            <img id="mainImage" src="Colored_Merged.jpeg" alt="Main Image">
+            <img id="mainImage" src="Colored_Merged.png" alt="Main Image">
             <button id="changeButton" type="button">Change Element</button>
         </div>
         <!---Should I move it to be added with css link?-->
