--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
 
 
 
-
-        <!-- Button Code to Switch Image-->
-        <div class="container">
-            <!-- Text Displayed as Button-->
-            <h1>Change Image on Button Click</h1>
-            <img id="mainImage" src="Plants2.png" alt="Main Image">
-            <button id="changeButton" type="button">Change Element</button>
-        </div>
+        <section> <!-- section??-->
+            <!-- Button Code to Switch Image-->
+            <div class="container">
+                <!-- Text Displayed as Button-->
+                <h1>Change Image on Button Click</h1>
+                <img id="mainImage" src="Plants2.png" alt="Main Image">
+                <button id="changeButton" type="button">Change Element</button>
+            </div>
+        </section> <!-- section??-->
         <!---Should I move it to be added with css link?-->
         <script src="script.js"></script>
     </body>
