--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
 
-        <section> <!-- section??-->
+        <section> <!-- section-->
             <!-- Button Code to Switch Image-->
             <div class="container">
                 <!-- Text Displayed as Button-->
@@ -65,7 +65,7 @@
                 <img id="mainImage" src="Plants2.png" alt="Main Image">
                 <button id="changeButton" type="button">Change Element</button>
             </div>
-        </section> <!-- section??-->
+        </section> <!-- section-->
         <!---Should I move it to be added with css link?-->
         <script src="script.js"></script>
     </body>
