--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <!-- Text Displayed as Button-->
                 <h1>Change Image on Button Click</h1>
-                <img id="mainImage" src="Plants2.png" alt="Main Image">
+                <img id="mainImage" src="CM.png" alt="Main Image">
                 <button id="changeButton" type="button">Change Element</button>
             </div>
         </section> <!-- section-->
