--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img id="mainImage" src="CM.png" alt="Main Image">
                 <button id="changeButton" type="button">Change Element</button>
 
-                <button id="changeBackgroundButton" type="button">Change Decor</button>
+                <button id="changeButton" type="button">Change Decor</button>
             </div>
         </section> <!-- section-->
         <!---Should I move it to be added with css link?-->
