--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </audio>
 
 
-            <iframe class="spotify-playlist" style="border-radius:12px" src="..." width="50%" height="352" frameBorder="0" allowfullscreen="" allow="..." loading="lazy"></iframe>
-
+            <iframe class="spotify-playlist" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/671ZWlQMPSY2IO6Ot7b57V?utm_source=generator" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+           
         </main>
       
